--- a/frontend/style.css
+++ b/frontend/style.css
@@ -36,7 +36,8 @@ body {
 
 .theme-button {
     position: absolute;
-    right: 0;
+    right: 0px;
+    top: 20px;
     background: var(--button-background);
     color: var(--header-color);
     border: none;
@@ -51,15 +52,60 @@ body {
     background: var(--button-hover-background);
 }
 
-.chat-container {
-    width: 50%;
-    max-width: 100%;
-    margin: 20px auto;
+.main-container {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
+
+.side-panel {
+    width: 20%;
     background: var(--container-background);
+    padding: 20px;
+    box-shadow: 0 2px 10px var(--box-shadow);
     border-radius: 8px;
+    height: 88vh;
+    margin: 20px;
+}
+
+.load-button {
+    background: var(--button-background);
+    color: var(--header-color);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.load-button:hover {
+    background: var(--button-hover-background);
+}
+
+.toggle-boxes {
+    margin-top: 20px;
+}
+
+.toggle-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.toggle-label {
+    margin-left: 10px;
+    font-size: 14px;
+}
+
+.chat-container {
+    /* flex: 1; */
+    width: 65%;
+    margin: 20px;
+    background: var(--container-background);
     box-shadow: 0 2px 10px var(--box-shadow);
     display: flex;
     flex-direction: column;
+    border-radius: 8px;
     height: 90vh;
 }
 
